add responsify web desktop and mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css" >
     <link rel="stylesheet" href="/styles/fonts.css" >
+    <link rel="stylesheet" href="/styles/media.css" >
     <title>Landig page</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
            <a href="#"><li>Serviços</li></a> 
            <a href="#"><li>Sobre</li></a> 
            <a href="#"><li>Contato</li></a> 
-           <a href="#"><li>Já tem uma conta?</li></a> 
+           <a href="#" id="inscreva-se-btn"><li>Já tem uma conta?</li></a> 
         </ul>
     </header>
         <main>
@@ -28,9 +29,9 @@
                 <h2> na Newslatter</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
                 <form>
-                    <input type="text" placeholder="Nome">
+                    <input type="text" placeholder="nome">
                     <input type="email" placeholder="e-mail">
-                    <input type="submit"value="Enviar >">
+                    <input type="submit"value="enviar >">
                 </form> 
                 </form>
                 </form>
